WIP: Fix XRecord to handle ButtonPress events from touchscreens

See:

* https://gitlab.freedesktop.org/xorg/xserver/-/issues/1046
* https://lists.x.org/archives/xorg-devel/2020-July/058582.html